fix some bugs, including the selection of language